--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         python-version: '3.10'
     - uses: actions/download-artifact@v2
       with:
-        name: my-trained-pipeline
+        name: classify
         path: .
     - name: Install dependencies
       run: pip install -r requirements.txt
