--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: classify
-        path: /*.pkl
+        path: ./*.pkl
         retention-days: 1
 
   test:
