--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,5 @@ jobs:
         path: .
     - name: Install dependencies
       run: pip install -r requirements.txt
-    - name: Test with pytest
+    - name: Test with a pytest
       run: pytest
