--- a/.github/workflows/mainCI.yml
+++ b/.github/workflows/mainCI.yml
@@ -1,9 +1,10 @@
 name: Push a Docker Image
+# Only trigger, when the build workflow succeeded i.e. CI Pipeline
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Run train and test"]
+    types:
+      - completed
 
 jobs:
   train:
@@ -17,13 +18,13 @@ jobs:
       with:
         python-version: '3.10'
     - name: Install dependencies
-      run: pip install -r requirements/requirements.txt
+      run: pip install -r requirements.txt
     - name: Train and save pipeline
-      run: python bikeshare_model/train_pipeline.py
+      run: python train.py
     - uses: actions/upload-artifact@v2
       with:
-        name: my-trained-pipeline
-        path: bikeshare_model/trained_models/*.pkl
+        name: classify
+        path: ./*.pkl
         retention-days: 1
 
   test:
@@ -39,40 +40,16 @@ jobs:
         python-version: '3.10'
     - uses: actions/download-artifact@v2
       with:
-        name: my-trained-pipeline
-        path: bikeshare_model/trained_models
+        name: classify
+        path: .
     - name: Install dependencies
-      run: pip install -r requirements/test_requirements.txt
+      run: pip install -r requirements.txt
     - name: Test with pytest
       run: pytest
 
-  build:
-    needs: [train, test]
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.10'
-    - uses: actions/download-artifact@v2
-      with:
-        name: my-trained-pipeline
-        path: bikeshare_model/trained_models
-    - name: Install dependencies
-      run: pip install --upgrade build
-    - name: Build package
-      run: python -m build
-    - uses: actions/upload-artifact@v2
-      with:
-        name: my-build-package
-        path: dist/*.whl
-        retention-days: 1
-
+ 
   push-image:
-    needs: [train, test, build]
+    needs: [train, test]
     runs-on: ubuntu-latest
     steps:
     - name: Repo Checkout
@@ -80,8 +57,8 @@ jobs:
 
     - uses: actions/download-artifact@v2
       with:
-        name: my-build-package
-        path: bikeshare_model_api
+        name: classify
+        path: .
 
     - name: Login to Docker hub
       env:
@@ -92,12 +69,12 @@ jobs:
     - name: Build the Docker image for Fastapi app
       env:
         DOCKER_USER: ${{ secrets.GK_DOCKER_NAME }}
-      run: docker build . -f Dockerfile -t $DOCKER_USER/bike_fastapi:latest4
+      run: docker build . -f Dockerfile -t $DOCKER_USER/bank:latest1
 
     - name: Push the Docker Image
       env:
         DOCKER_USER: ${{ secrets.GK_DOCKER_NAME }}
-      run: docker push $DOCKER_USER/bike_fastapi:latest4
+      run: docker push $DOCKER_USER/bank:latest1
 
     - name: Logout to Docker hub
       run: docker logout
